{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 26,
  "lineage": "aae236e8-d809-72aa-2271-a3113f85736f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:network-acl/acl-0ec1d2a874b4a2c79",
            "default_network_acl_id": "acl-0ec1d2a874b4a2c79",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ec1d2a874b4a2c79",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "523738358273",
            "subnet_ids": [
              "subnet-0255eb87db225fbeb",
              "subnet-08225eb362382e5fd",
              "subnet-0b10a850830ac2d5c",
              "subnet-0cddd194aab275b5a",
              "subnet-0d5f2a4bf1eabf7aa",
              "subnet-0e830468cbd9b333f"
            ],
            "tags": {
              "Name": "IT-staging-myvpc-default",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-default",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-0e7341d424bb0b1aa",
            "default_route_table_id": "rtb-0e7341d424bb0b1aa",
            "id": "rtb-0e7341d424bb0b1aa",
            "owner_id": "523738358273",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "IT-staging-myvpc-default",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-default",
              "environment": "staging",
              "owners": "IT"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:security-group/sg-0aa56c5f49b263317",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0aa56c5f49b263317",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "523738358273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "IT-staging-myvpc-default",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-default",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc253460fd07e51e",
            "arn": "arn:aws:ec2:us-east-1:523738358273:elastic-ip/eipalloc-0fc253460fd07e51e",
            "domain": "vpc",
            "id": "eipalloc-0fc253460fd07e51e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-198-126-206.compute-1.amazonaws.com",
            "public_ip": "54.198.126.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "IT-staging-myvpc-us-east-1a",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-us-east-1a",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:internet-gateway/igw-0dbadd60e3bab97d8",
            "id": "igw-0dbadd60e3bab97d8",
            "owner_id": "523738358273",
            "tags": {
              "Name": "IT-staging-myvpc",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fc253460fd07e51e",
            "association_id": "eipassoc-0d981635ec72d82f7",
            "connectivity_type": "public",
            "id": "nat-00c3766abf041bf75",
            "network_interface_id": "eni-0d0bb1eeb742a43b9",
            "private_ip": "10.0.101.200",
            "public_ip": "54.198.126.206",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cddd194aab275b5a",
            "tags": {
              "Name": "IT-staging-myvpc-us-east-1a",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-us-east-1a",
              "environment": "staging",
              "owners": "IT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-030b6b7f2886316aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00c3766abf041bf75",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030b6b7f2886316aa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dbadd60e3bab97d8",
            "id": "r-rtb-0a06fee65348994cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a06fee65348994cf",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-04bb92a09007c2d15",
            "id": "rtb-04bb92a09007c2d15",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-staging-myvpc-db",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-db",
              "environment": "staging",
              "owners": "IT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-030b6b7f2886316aa",
            "id": "rtb-030b6b7f2886316aa",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-staging-myvpc-private",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-private",
              "environment": "staging",
              "owners": "IT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:route-table/rtb-0a06fee65348994cf",
            "id": "rtb-0a06fee65348994cf",
            "owner_id": "523738358273",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IT-staging-myvpc-public",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-public",
              "environment": "staging",
              "owners": "IT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06acccdb6241c52af",
            "route_table_id": "rtb-04bb92a09007c2d15",
            "subnet_id": "subnet-0e830468cbd9b333f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3bda3a33f0aa9ae",
            "route_table_id": "rtb-04bb92a09007c2d15",
            "subnet_id": "subnet-0b10a850830ac2d5c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059aed16f9068670c",
            "route_table_id": "rtb-030b6b7f2886316aa",
            "subnet_id": "subnet-0d5f2a4bf1eabf7aa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b2a90de262eb19c",
            "route_table_id": "rtb-030b6b7f2886316aa",
            "subnet_id": "subnet-0255eb87db225fbeb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eaad276fc5c5ee7",
            "route_table_id": "rtb-0a06fee65348994cf",
            "subnet_id": "subnet-0cddd194aab275b5a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004a68e765ff1bb4d",
            "route_table_id": "rtb-0a06fee65348994cf",
            "subnet_id": "subnet-08225eb362382e5fd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0e830468cbd9b333f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e830468cbd9b333f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IT-staging-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-db-us-east-1a",
              "Type": "Private Database Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0b10a850830ac2d5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b10a850830ac2d5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IT-staging-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-db-us-east-1b",
              "Type": "Private Database Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0d5f2a4bf1eabf7aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5f2a4bf1eabf7aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IT-staging-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-private-us-east-1a",
              "Type": "Private Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0255eb87db225fbeb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0255eb87db225fbeb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IT-staging-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-private-us-east-1b",
              "Type": "Private Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-0cddd194aab275b5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cddd194aab275b5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IT-staging-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-public-us-east-1a",
              "Type": "Public Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:subnet/subnet-08225eb362382e5fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08225eb362382e5fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "523738358273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IT-staging-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc-public-us-east-1b",
              "Type": "Public Subnets",
              "environment": "staging",
              "owners": "IT"
            },
            "vpc_id": "vpc-0961426aae51d746d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:523738358273:vpc/vpc-0961426aae51d746d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec1d2a874b4a2c79",
            "default_route_table_id": "rtb-0e7341d424bb0b1aa",
            "default_security_group_id": "sg-0aa56c5f49b263317",
            "dhcp_options_id": "dopt-05350501c0a899a7a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0961426aae51d746d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e7341d424bb0b1aa",
            "owner_id": "523738358273",
            "tags": {
              "Name": "IT-staging-myvpc",
              "environment": "staging",
              "owners": "IT"
            },
            "tags_all": {
              "Name": "IT-staging-myvpc",
              "environment": "staging",
              "owners": "IT"
            }
          }
        }
      ]
    }
  ]
}